advertisement z-index fix

--- a/public/css/home-page.css
+++ b/public/css/home-page.css
@@ -115,3 +115,6 @@ button{
     margin-right:15%;
     border: 2px solid lightgreen;
 }
+.advert{
+    z-index: -1;
+}
